master: fix letter spacing

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -25,7 +25,7 @@
   font-size: 4rem;
   line-height: 0.9;
   font-weight: 600;
-  margin-right: -0.1em;
+  margin-right: 0.15em;
 }
 
 .mission-author {
